# cleared

./: .gitignore  Anchor.toml  Arcium.toml  LICENSE  README.md  ROADMAP.md  package.json
app/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/auctions/: page.tsx
app/src/app/auctions/[id]/: page.tsx
app/src/app/launch/: page.tsx
app/src/app/profile/: page.tsx
app/src/components/: auction-card.tsx  bid-form.tsx  close-auction-button.tsx  countdown.tsx  friendly-error-box.tsx  site-header.tsx  wallet-button.tsx  wallet-provider.tsx
app/src/components/ui/: calendar.tsx  input.tsx  popover.tsx
app/src/lib/: anchor.ts  arcium.ts  constants.ts  format.ts  friendly-error.ts  pdas.ts  queries.ts
app/src/lib/idl/: cleared.json  cleared.ts
encrypted-ixs/src/: lib.rs
programs/cleared/: Cargo.toml
programs/cleared/src/: lib.rs
scripts/: check_compdefs.ts  create_devnet_billion_token.ts  devnet_init_comp_defs.ts  devnet_smoke.ts  mint_token.ts
tests/: cleared.ts
